2006-02-14  Andy Wingo  <wingo@pobox.com>

	* sys/glsink/glimagesink.c (gst_glimage_sink_init): Come on
	schleef, don't break me gst-inspect -a.

2006-02-14  Edward Hervey  <edward@fluendo.com>

	* gst/qtdemux/qtdemux.c: (next_entry_size), (gst_qtdemux_chain):
	Handle the case where data atoms are before moov atoms in push-based mode.
	Errors out gracefully.

2006-02-13  Edward Hervey  <edward@fluendo.com>

	* gst/qtdemux/Makefile.am:
	* gst/qtdemux/qtdemux.c: (gst_qtdemux_init),
	(gst_qtdemux_handle_sink_event), (gst_qtdemux_change_state),
	(extract_initial_length_and_fourcc),
	(gst_qtdemux_loop_state_header), (gst_qtdemux_loop_state_movie),
	(gst_qtdemux_loop_header), (next_entry_size), (gst_qtdemux_chain),
	(qtdemux_sink_activate), (qtdemux_sink_activate_pull),
	(qtdemux_sink_activate_push), (qtdemux_parse_trak):
	* gst/qtdemux/qtdemux.h:
	QtDemux can now work push-based.
	It still needs some love for seeking.

2006-02-13  Edgard Lima  <edgard.lima@indt.org.br>

	* configure.ac:
	* gst/freeze/Makefile.am:
	* gst/freeze/gstfreeze.c:
	* gst/freeze/gstfreeze.h:
	* gst/freeze/FAQ:
	freeze plugin ported to 0.10 by
	Renato Filho <renato.filho@indt.org.br>

2006-02-10  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* gst/cdxaparse/Makefile.am:
	* gst/cdxaparse/gstcdxaparse.c:
	* gst/cdxaparse/gstcdxaparse.h:
	  Port cdxaparse, makes VCD playback work.

2006-02-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_header),
	(qtdemux_parse_trak):
	  use the correct variable to check if we can calculate
	  the last chunk.  Looks like an obvious bug, and makes
	  the dump of offsets comparable to other tools

2006-02-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_header),
	(qtdemux_parse_trak):
	  clean up some debugging, using _OBJECT, moving recurring
	  messages to LOG level

2006-02-06  Edgard Lima <edgard.lima@indt.org.br>

	* configure.ac: